main/default/objects/Garage_Maintenance_Records__c/Garage_Maintenance_Records__c.object-meta.xml
<CustomObject>
    <label>Garage/Maintenance Records</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Garage/Maintenance Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>