main/default/objects/Garage_Maintenance_Records__c/fields/Fleet__c.field-meta.xml
<CustomField>
    <fullName>Fleet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assigned Fleet</label>
    <referenceTo>Fleet__c</referenceTo>
    <relationshipLabel>Garage/Maintenance Records</relationshipLabel>
    <relationshipName>Garage_Maintenance_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>