main/default/objects/Garage_Maintenance_Records__c/fields/Garage__c.field-meta.xml
<CustomField>
    <fullName>Garage__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Garage</label>
    <referenceTo>Garage__c</referenceTo>
    <relationshipLabel>Garage/Maintenance Records</relationshipLabel>
    <relationshipName>Garage_Maintenance_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>